# MuTabNet

./: .gitignore  LICENSE  README.md  infer.py  preprocess.py  pyproject.toml  show.py  test.py  train.py  train.sh
alphabet/fintabnet/: character_alphabet.txt  structure_alphabet.txt
alphabet/pubtabnet/: character_alphabet.txt  structure_alphabet.txt
alphabet/syntabnet/: character_alphabet.txt  structure_alphabet.txt
configs/: fintabnet.py  pubtab250.py  pubtabfin.py  pubtabnet.py  syntabnet.py
datasets/: FinTabNet.yaml  FinTabSub.yaml  PubTab250.yaml  PubTabNet.yaml  PubTabSub.yaml  SynTabNet.yaml
mutab/apis/: __init__.py  test.py  train.py
mutab/block/: __init__.py  block.py
mutab/data/: __init__.py  dataset.py  pipeline.py
mutab/datasets/: dataset.py  loader.py  pipeline.py
mutab/loss/: __init__.py  loss.py
mutab/metrics/: metric.py  sample_test.json
mutab/model/: __init__.py  backbone.py  decoder.py  encoder.py  factory.py  handler.py  lexicon.py  network.py  revisor.py  scanner.py
mutab/models/: __init__.py  attention.py  backbone.py  decoder.py  encoder.py  factory.py  handler.py  loss.py  network.py  revisor.py  scanner.py
mutab/optimizer/: __init__.py  factory.py
mutab/phase/: __init__.py  decoder.py  fetcher.py  locator.py  updater.py
mutab/score/: __init__.py  metric.py
mutab/syntax/: __init__.py  html_to_otsl.py  otsl_to_html.py  sample_html.json  sample_otsl.json
mutab/table/: html_to_otsl.py  otsl_to_html.py  sample_html.json  sample_otsl.json
mutab/utils/: __init__.py  utils.py
