[project]
name = "mutab"
version = "0.1.0"
dependencies = [
  "apted",
  "dacite",
  "distance",
  "lxml",
  "mmcv",
  "mmengine",
  "more-itertools",
  "positional-encodings[pytorch]",
  "ranger@git+https://github.com/lessw2020/Ranger-Deep-Learning-Optimizer",
  "rotary-embedding-torch",
  "ruamel-yaml",
  "tqdm",
]

[build-system]
requires = ["setuptools", "torch>=2.4"]

[tool.setuptools.packages.find]
include = ["mutab"]
